Libraries have been completed.

--- a/JSIntro/package.json
+++ b/JSIntro/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gulp": "^4.0.2",
     "live-server": "^1.2.2",
     "lodash": "^4.17.21"
   }
