--- a/JSIntro/package.json
+++ b/JSIntro/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "gulp": "^4.0.2",
     "live-server": "^1.2.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "node-fetch": "^3.2.9"
   }
 }
