--- a/day-08/api/pom.xml
+++ b/day-08/api/pom.xml
@@ -19,6 +19,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>2.7.2</version>
