refresh token has been done.

--- a/day-10/api/src/main/resources/application.properties
+++ b/day-10/api/src/main/resources/application.properties
@@ -11,3 +11,4 @@ application.jwt.secretKey=springsecurityspringsecurityspringsecurityspringsecuri
 application.jwt.expires.in=3600000
 application.jwt.tokenPrefix=Bearer 
 application.jwt.tokenExpirationAfterDays=10
+application.jwt.refresh.token.expires.in=604800
