application.properties for JWT

--- a/day-14/api/src/main/resources/application.properties
+++ b/day-14/api/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/book-store-course2?useUnicode=
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.show-sql=true
+
+application.jwt.secretKey = "springsecuritybookstorespringsecuritybookstore2022202033"
+application.jwt.expire.in = 360000
+application.jwt.tokenPrefix = Bearer
+application.jwt.tokenExpirationAfterDays = 10
+application.jwt.refresh.token.expires.in = 604800
